--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,167 +1,14 @@
-annotated-types==0.7.0
-anyio==4.6.2.post1
-asn1crypto==1.5.1
-bcc==0.29.1
-beautifulsoup4==4.12.3
-blinker==1.7.0
-Brlapi==0.8.5
-Brotli==1.1.0
-build==1.0.3
-CacheControl==0.14.0
-certifi==2023.11.17
-chardet==5.2.0
-cleo==2.1.0
-click==8.1.6
-colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-crashtest==0.4.1
-cryptography==41.0.7
-cssselect==1.2.0
-cupshelpers==1.0
-dbus-python==1.3.2
-diskcache==5.6.3
-distlib==0.3.8
-distro==1.9.0
-distro-info==1.7+build1
-dulwich==0.21.6
-evdev==1.7.0
+aiofiles==24.1.0
 fastapi==0.115.2
-fastimport==0.9.14
-fastjsonschema==2.19.0
-filelock==3.13.1
-fsspec==2024.10.0
-fuse-python==1.0.7
-gpg==1.18.0
-h11==0.14.0
-html5lib==1.1
-httplib2==0.20.4
-huggingface-hub==0.26.1
-idna==3.6
-importlib-metadata==4.12.0
-inquirerpy==0.3.4
-installer==0.7.0
-jaraco.classes==3.2.1
-jeepney==0.8.0
-Jinja2==3.1.4
-keyring==24.3.1
-language-selector==0.1
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-llama_cpp_python==0.3.1
-lockfile==0.12.2
-louis==3.29.0
-lxml==5.2.1
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.1
-mdurl==0.1.2
-mechanize==0.4.9
-meson==1.3.2
-more-itertools==10.2.0
-mpmath==1.3.0
-msgpack==1.0.3
-mutagen==1.46.0
-netaddr==0.8.0
-netifaces==0.11.0
-networkx==3.2.1
-numpy==2.1.2
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.1.105
-nvidia-nvtx-cu12==12.1.105
-oauthlib==3.2.2
-olefile==0.46
-packaging==24.0
-pexpect==4.9.0
-pfzy==0.3.4
-pillow==10.2.0
-pkginfo==1.9.6
-platformdirs==4.2.0
-poetry==1.8.2
-poetry-core==1.9.0
-poetry-plugin-export==1.6.0
-prompt_toolkit==3.0.48
-psutil==5.9.8
-ptyprocess==0.7.0
-PyAudio==0.2.13
-pycairo==1.25.1
-pycryptodomex==3.20.0
-pycups==2.0.1
+faster-whisper==1.0.3
+httpx==0.25.2
+librosa==0.10.2.post1
+numpy==1.26.4
 pydantic==2.9.2
 pydantic-settings==2.5.2
-pydantic_core==2.23.4
-Pygments==2.17.2
-PyGObject==3.48.2
-PyJWT==2.7.0
-pylev==1.4.0
-pylibacl==0.7.0
-pyparsing==3.1.1
-pyproject_hooks==1.0.0
-PyQt5==5.15.10
-PyQt5-sip==12.13.0
-python-apt==2.7.7+ubuntu3
-python-debian==0.1.49+ubuntu2
 python-dotenv==1.0.1
-python-xlib==0.33
-pyudev==0.24.0
-pyxattr==0.8.1
-pyxdg==0.28
-PyYAML==6.0.1
+python-multipart==0.0.9
 requests==2.31.0
-requests-toolbelt==1.0.0
-rich==13.7.1
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.3
-setuptools==68.1.2
-shellingham==1.5.4
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.5
-sse-starlette==2.1.3
-ssh-import-id==5.11
-starlette==0.39.2
-starlette-context==0.3.6
-sympy==1.13.1
-systemd-python==235
-termcolor==2.5.0
-terminator==2.1.3
-toml==0.10.2
-tomlkit==0.12.4
-torch==2.2.1+cu121
-torchaudio==2.2.1+cu121
-torchvision==0.17.1+cu121
-tornado==6.4
-tqdm==4.66.5
-trove-classifiers==2024.1.31
-typing_extensions==4.10.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.2
-unattended-upgrades==0.1
-urllib3==2.0.7
-usb-creator==0.3.16
-uvicorn==0.31.1
-vboxapi==1.0
-virtualenv==20.25.0+ds
-wadllib==1.3.6
-wcwidth==0.2.13
-webencodings==0.5.1
-websockets==10.4
-wheel==0.42.0
-WoeUSB-ng==0.2.12
-wxPython==4.2.1
-xdg==5
-xkit==0.0.0
-yt-dlp==2024.4.9
-zipp==1.0.0
-httpx==0.25.2
+scipy==1.11.4
+soundfile==0.12.1
+uvicorn[standard]==0.31.1
