--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,17 @@
 aiofiles==24.1.0
+aiohttp==3.10.0
+aio-pika==9.3.1
 fastapi==0.115.2
 faster-whisper==1.0.3
-httpx==0.25.2
+httpx>=0.27.1
 librosa==0.10.2.post1
+mcp>=1.14.1
 numpy==1.26.4
-pydantic==2.9.2
-pydantic-settings==2.5.2
+pydantic>=2.11.0
+pydantic-settings>=2.5.2
 python-dotenv==1.0.1
-python-multipart==0.0.9
+python-multipart>=0.0.9
 requests==2.31.0
 scipy==1.11.4
 soundfile==0.12.1
-uvicorn[standard]==0.31.1
-httpx==0.25.2
-aio-pika==9.3.1
+uvicorn[standard]>=0.31.1
